<resources>
    <string name="app_name">Movie App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_theaters">In Theaters</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="dummy_vote">7.7</string>
    <string name="see_all">See All</string>
    <string name="follow_movie_app">Follow Movie App</string>
    <string name="story_line">Story Line</string>
    <string name="plot_summary">Plot Summary</string>
    <string name="descriptionn">Description</string>

    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\nIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default movieModel text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="detail">Detail</string>
    <string name="release_data">Release Data</string>
    <string name="country_of_origin">Country Of Origin</string>
    <string name="language_spoken">Language Spoken</string>
    <string name="cast">Cast:</string>
    <string name="title">Title</string>
    <string name="tagline">Tagline</string>
    <string name="genres">Genres</string>
    <string name="home_page">HomePage</string>
    <string name="top_billed_cast">Top Billed Cast</string>
    <string name="most_popular">Most Popular</string>

</resources>
