<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.farooqi.movieapp.activities.DetailActivity">

    <LinearLayout
        android:id="@+id/linear_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_280_dp"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/rel_layout_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_280_dp">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/colorBlue"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>

            <ImageView
                android:id="@+id/img_player_icon_detail"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/youtube_social_icon_dark"
                android:layout_centerInParent="true"/>

            <ImageView
                android:id="@+id/img_fav_detail"
                android:layout_width="@dimen/width_50_dp"
                android:layout_height="@dimen/height_50_dp"
                android:layout_alignBottom="@id/img_detail"
                android:layout_alignEnd="@id/img_detail"
                android:layout_alignRight="@id/img_detail"
                android:paddingLeft="@dimen/all_pad_10_dp"
                android:paddingRight="@dimen/all_pad_10_dp"
                android:src="@drawable/ic_fav" />
        </RelativeLayout>


        <TextView
            android:id="@+id/lbl_title_detail"
            style="@style/Heading"
            android:layout_margin="@dimen/all_margin_10_dp"
            tools:text="@string/title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_year_detail"
                style="@style/SubHeading_Detail"
                android:layout_marginLeft="@dimen/left_margin_15_dp"
                android:layout_marginStart="@dimen/left_margin_15_dp"
                tools:text="2017" />

            <TextView
                android:id="@+id/lbl_time_detail"
                style="@style/SubHeading_Detail"
                android:layout_marginLeft="@dimen/left_margin_15_dp"
                android:layout_marginStart="@dimen/left_margin_15_dp"
                tools:text="1:30hr" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/width_100_dp"
                    android:layout_height="0dp" />

                <ImageView
                    android:id="@+id/img_icon_rate_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/btn_star" />

                <TextView
                    android:id="@+id/lbl_rate_detail"
                    style="@style/SubHeading_Detail"
                    tools:text="7/10" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/all_margin_16_dp"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            tools:visibility="gone">

            <TextView
                android:id="@+id/lbl_hd_story_detail"
                style="@style/Heading"
                android:text="@string/story_line" />

            <TextView
                android:id="@+id/lbl_sub_hd_desc_detail"
                style="@style/SubHeading_Detail"
                android:padding="@dimen/all_pad_5_dp"
                android:text="@string/plot_summary" />

            <TextView
                android:id="@+id/lbl_desc_detail"
                style="@style/DesText"
                tools:text="@string/dummy_text" />

            <TextView
                android:id="@+id/lbl_sub_hd_desc_tag_line"
                style="@style/SubHeading_Detail"
                android:text="@string/tagline"
                android:padding="@dimen/all_pad_5_dp"/>

            <TextView
                android:id="@+id/lbl_desc_tag_line"
                style="@style/DesText"
                tools:text="Long live the king"/>

            <TextView
                android:id="@+id/lbl_sub_hd_desc_genre"
                style="@style/SubHeading_Detail"
                android:text="@string/genres"
                android:padding="@dimen/all_pad_5_dp"/>

            <TextView
                android:id="@+id/lbl_desc_genre"
                style="@style/DesText"
                tools:text="Action Adventure Comedy"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/all_margin_10_dp"
            android:background="@color/background">

            <TextView
                android:id="@+id/lbl_see_all_cast_detail"
                style="@style/SubHeading_Tabs"
                android:layout_alignBaseline="@id/lbl_hd_popular_home"
                android:text="@string/see_all" />

            <TextView
                android:id="@+id/lbl_hd_popular_home"
                style="@style/Heading"
                android:text="@string/top_billed_cast" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rec_view_cast_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/lbl_hd_popular_home"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/all_margin_16_dp"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_det_hd_detail"
                style="@style/Heading"
                android:text="@string/detail" />

            <TextView
                android:id="@+id/lbl_rel_data_hd_detail"
                style="@style/SubHeading_Detail"
                android:text="@string/release_data" />

            <TextView
                android:id="@+id/lbl_desc_rel_date"
                style="@style/DesText"
                tools:text="12 Feb 2017"/>

            <TextView
                android:id="@+id/lbl_ori_hd_detail"
                style="@style/SubHeading_Detail"
                android:text="@string/country_of_origin" />

            <TextView
                android:id="@+id/lbl_desc_origin"
                style="@style/DesText"
                tools:text="United State"/>

            <TextView
                android:id="@+id/lbl_lang_hd_detail"
                style="@style/SubHeading_Detail"
                android:text="@string/home_page" />

        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>